intTests/test_type_errors/err041.saw
//
// Specifically trigger the selective refinement of the printed
// mismatch of function types.

let foo (a: Int) (b: Int) (c: String) : Int = a;

let g (f: Int -> Int -> Int -> Int) (x: Int) = f x x x;

let x = g foo 3;
